--- a/platformio.ini
+++ b/platformio.ini
@@ -4,5 +4,6 @@ env_default = nodemcu
 [env:nodemcu]
 platform = espressif
 framework = arduino
-board = nodemcu
+board = d1_mini
 upload_port = /dev/ttyUSB*
+upload_speed = 921600
