use espressif8266 for platform

--- a/platformio.ini
+++ b/platformio.ini
@@ -2,7 +2,7 @@
 env_default = nodemcu
 
 [env:nodemcu]
-platform = espressif
+platform = espressif8266
 framework = arduino
 board = d1_mini
 upload_port = /dev/ttyUSB*
