--- a/platformio.ini
+++ b/platformio.ini
@@ -5,8 +5,8 @@ env_default = nodemcu
 platform = espressif
 framework = arduino
 board = d1_mini
-;upload_port = /dev/ttyUSB*
-upload_port = 192.168.1.30
+upload_port = COM11
+;upload_port = 192.168.1.30
 ;upload_port = hiptouchlogo.local
 upload_speed = 921600
 monitor_baud = 115200
